Add the address format page.
Also minor other improvements :
- Use actual URL in glossary;
- Add a couple of type to the glossary;
- Use 'Account' instead of 'Customer' in the Customer page header.

--- a/docs/1.0/api/account/index.textile
+++ b/docs/1.0/api/account/index.textile
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "- REST API V1.0 Resources - Customer"
+title: "- REST API V1.0 Resources - Account"
 ---
 
 h1(blue newsection#format). Account Format
