--- a/docs/1.0/api/index.textile
+++ b/docs/1.0/api/index.textile
@@ -77,6 +77,19 @@ p(caption). Accounts are collections of accounts (leads and customers).
 |"PUT accounts":accounts/#put|Create several accounts in a row|
 |"DELETE accounts":accounts/#delete|Delete several accounts in a row|
 
+p(title). "Account Contacts":account_contact/#format
+
+p(caption). Account contacts are collections of account contacts.
+
+|_(thead). Type |_(thead). Description |
+|"GET account_contact/:id":account_contact/#get|Returns all the information about the account contact|
+|"DELETE account_contact/:id":account_contact/#delete|Deletes the account contact|
+|"PUT account_contact/:id":account_contact/#put|Update the account contact|
+|"GET account_contacts":account_contacts/#get|Returns the list of all your account contacts|
+|"POST account_contacts":account_contacts/#post|Create a new account contact|
+|"PUT account_contacts":account_contacts/#put|Create several account contacts in a row|
+|"DELETE account_contacts":account_contacts/#delete|Delete several account contacts in a row|
+
 p(title). Projects
 
 p(caption). Projects are used to group a list of tasks.
