Add list of mandatory fields on PUT description.

--- a/docs/1.0/api/account/index.textile
+++ b/docs/1.0/api/account/index.textile
@@ -129,6 +129,7 @@ h3. Resource Information
 * HTTP Methods: PUT
 * Body Format: JSON
 * Response Format: JSON
+* Mandatory fields: type, status, company_name (for Company)/lastname (for Individual)
 
 h3. Example Request
 
