Finish the account_contact page, adds the account_contacts URL into the same page.

--- a/docs/1.0/api/account/index.textile
+++ b/docs/1.0/api/account/index.textile
@@ -217,7 +217,7 @@ The complete JSON of the account, as it was created by the system.
 
 h2(#accounts_put). PUT accounts
 
-p. Create or Update several accounts in a row.
+p. Create and Update several accounts in a row.
 
 h3. Resource Information
 
